<resources>
    <string name="app_name">PracticaFCT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maxAmount">62</string>
    <string name="pagadas">Pagadas</string>
    <string name="anuladas">Anuladas</string>
    <string name="cuotaFija">Cuota Fija</string>
    <string name="pendientePago">Pendientes de pago</string>
    <string name="planPago">Plan de pago</string>
    <string name="btnAplicar">Aplicar</string>
    <string name="btnEliminarFiltros">Eliminar filtros</string>
    <string name="diaMesAnno">Dia/Mes/Año</string>

    <!-- AUTHENTICATION -->

    <!-- activity_login.xml -->
    <string name="login_activity_recordar_usuario">He olvidado mis datos</string>
    <string name="login_activity_recordar_contraseña">Recordar contraseña</string>
    <string name="login_activity_btn_entrar">Entrar</string>
    <string name="login_activity_btn_registrate">Registrate</string>
    <string name="login_activity_tambien_puedes">También puedes</string>
    <string name="login_activity_usuario_hint">Usuario</string>
    <string name="login_activity_contraseña_hint">Contraseña</string>

    <!-- ForgotPasswordActivity -->
    <string name="forgot_password_activity_contraseña_olvidada_pregunta">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_activity_explicacion_recuperar_contraseña">Indica tu email y recibirás un enlace de reinicio.</string>
    <string name="forgot_password_activity_correo_hint">Correo electrónico</string>
    <string name="forgot_password_activity_recordar_contraseña_btn">Recordar contraseña</string>
    <string name="forgot_password_activity_tambien_puedes">También puedes</string>
    <string name="forgot_password_activity_volver_inicio_btn">Iniciar sesión</string>
    <string name="forgot_password_activity_repetir_contraseña_hint">Repetir contraseña</string>
    <string name="forgot_password_activity_recordar_contraseña">Recordar contraseña</string>
    <string name="forgot_password_activity_olvide_mis_credenciales">He olvidado mis datos</string>
    <string name="forgot_password_activity_iniciar_sesion_btn">Entrar</string>
    <string name="forgot_password_activity_registrarse_btn">Registrate</string>
    <string name="forgot_password_activity_boton_registrarse">Registrarme</string>

    <!-- MainActivity -->
    <string name="main_activity_título">Prácticas Android</string>
    <string name="main_activity_práctica1">Práctica 1</string>
    <string name="main_activity_práctica2">Práctica 2</string>
    <string name="main_activity_práctica3">Navegador</string>

    <!-- NavegacionActivity -->
    <string name="navegacion_activity_btn_abrir_navegador_externo">Abrir Navegador externo</string>
    <string name="navegacion_activity_btn_abrir_webview">Abrir Webview</string>
    <string name="navegacion_activity_texto_navegación">Desde una aplicación Android, se pude acceder a páginas webs, mediante el nave-gador externo o mediante Webviews</string>


    <!-- SmartSolarActivity -->
    <string name="smart_solar_activity_atrás">Atrás</string>
    <string name="smart_solar_activity_título">Smart Solar</string>
    <string name="smart_solar_activity_mi_instalación">Mi instalación</string>
    <string name="smart_solar_activity_energía">Energía</string>
    <string name="smart_solar_activity_detalles">Detalles</string>


    <!-- FirstFragmentFactura -->
    <string name="first_fragment_factura_consumo">Consumo</string>
    <string name="first_fragment_factura_ktor">Ktor</string>
    <string name="first_fragment_factura_switch">Switch</string>
    <string name="first_fragment_factura_facturas">Facturas</string>


    <!-- FragmentInformación -->
    <string name="fragment_informacion_estado_solicitud">Estado solicitud autoconsumo</string>
    <string name="fragment_información_texto_descripción">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, éste variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="fragment_información_aceptar">Aceptar</string>


    <!-- PantallaDetallesFragment -->
    <string name="pantalla_detalles_fragment_CAU">CAU (Código Autoconsumo)</string>
    <string name="pantalla_detalles_fragment_estado_solicitud_alta">No hemos recibido ninguna solicitud de autoconsumo</string>
    <string name="pantalla_detalles_fragment_tipo_autoconsumo">Tipo autoconsumo</string>
    <string name="pantalla_detalles_fragment_excedentes_y_compensación">Con excedentes y compensación individual - Consumo</string>
    <string name="pantalla_detalles_fragment_compensaciónn_de_excedentes">Compensación de excedentes</string>
    <string name="pantalla_detalles_fragment_precio_pvpc">Precio PVPC</string>
    <string name="pantalla_detalles_fragment_potencia_de_instalación">Potencia de instalación</string>
    <string name="pantalla_detalles_fragment__5kwp">5kWp</string>

    <!-- PantallaEnergíaFragment -->
    <string name="pantalla_energía_fragment_mensaje">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu producción solar. Sentimos las molestias.</string>

    <!-- PantallaInstalaciónFragment -->
    <string name="pantalla_instalacion_fragment_info_fotovoltaica">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real</string>


</resources>