<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SmartSolarDetallesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_detalles_fragment_CAU"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvCAU"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCAU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="ES0021000000001994LJ1FA000"
        android:inputType="none"
        android:id="@+id/etCAU"
        android:focusable="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginTop="18dp"
        android:id="@+id/tvEstado"
        app:layout_constraintTop_toBottomOf="@+id/etCAU"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Estado solicitud alta autoconsumidor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="30dp"
        tools:text="@string/pantalla_detalles_fragment_estado_solicitud_alta"
        android:inputType="none"
        android:id="@+id/etEstado"
        android:focusable="false"

        />

    <ImageButton
        android:id="@+id/ibInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="@id/etEstado"
        app:layout_constraintTop_toTopOf="@id/etEstado"
        app:layout_constraintBottom_toBottomOf="@id/etEstado"
        app:tint="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginTop="18dp"
        android:id="@+id/tvTipo"
        app:layout_constraintTop_toBottomOf="@+id/etEstado"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pantalla_detalles_fragment_tipo_autoconsumo"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/pantalla_detalles_fragment_excedentes_y_compensación"
        android:inputType="none"
        android:id="@+id/etTipo"
        android:focusable="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginTop="18dp"
        android:id="@+id/tvCompensacion"
        app:layout_constraintTop_toBottomOf="@+id/etTipo"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pantalla_detalles_fragment_compensaciónn_de_excedentes"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCompensacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/pantalla_detalles_fragment_precio_pvpc"
        android:inputType="none"
        android:id="@+id/etCompensacion"
        android:focusable="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginTop="18dp"
        android:id="@+id/tvPotencia"
        app:layout_constraintTop_toBottomOf="@+id/etCompensacion"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pantalla_detalles_fragment_potencia_de_instalación"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPotencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/pantalla_detalles_fragment__5kwp"
        android:inputType="none"
        android:id="@+id/etPotencia"
        android:focusable="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>