<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".ui.activities.FacturaActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/tvFacturas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/ib_consumo_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:src="@drawable/ic_chevron_left"
            app:tint="@color/green">

        </ImageButton>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment_factura_consumo"
            android:textColor="@color/green"
            android:textSize="16dp">

        </TextView>

        <Button
            android:id="@+id/btKtor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/first_fragment_factura_ktor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerFacturas" />

        <ImageButton
            android:id="@+id/ibFiltro"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@color/transparente"
            android:scaleType="fitXY"
            android:src="@drawable/ic_filter"
            app:tint="@color/grey">

        </ImageButton>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchRetromock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/first_fragment_factura_switch"
            android:textSize="10dp"

            />


    </Toolbar>

    <TextView
        android:id="@+id/tvFacturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/first_fragment_factura_facturas"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFacturas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFacturas">


    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>