<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/iv_olvido_iberdrola"
        android:layout_width="165dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_logo_iberdrola_cli"
        app:layout_constraintBottom_toTopOf="@+id/espacio_olvido_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Space
        android:id="@+id/espacio_olvido_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_olvido_explicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_olvido_iberdrola" />

    <TextView
        android:id="@+id/tv_olvido_explicacion_pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password_activity_contraseña_olvidada_pregunta"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_olvido_explicacion"
        app:layout_constraintEnd_toEndOf="@+id/et_olvido_correo"
        app:layout_constraintStart_toStartOf="@+id/et_olvido_correo"
        app:layout_constraintTop_toBottomOf="@+id/espacio_olvido_top" />

    <TextView
        android:id="@+id/tv_olvido_explicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password_activity_explicacion_recuperar_contraseña"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_olvido_correo"
        app:layout_constraintEnd_toEndOf="@+id/et_olvido_correo"
        app:layout_constraintStart_toStartOf="@+id/et_olvido_correo"
        app:layout_constraintTop_toBottomOf="@+id/tv_olvido_explicacion_pregunta" />

    <EditText
        android:id="@+id/et_olvido_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_password_activity_correo_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/espacio_olvido_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_olvido_explicacion" />

    <Space
        android:id="@+id/espacio_olvido_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_olvido_recordar_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_olvido_correo" />

    <Button
        android:id="@+id/btn_olvido_recordar_contraseña"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_recordar_contraseña_btn"
        app:layout_constraintBottom_toTopOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espacio_olvido_bottom"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divisor_olvido_izquierda"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:layout_constraintEnd_toStartOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_olvido_etiqueta_otra_opción" />

    <TextView
        android:id="@+id/tv_olvido_etiqueta_otra_opción"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password_activity_tambien_puedes"
        app:layout_constraintBottom_toTopOf="@+id/btn_atras"
        app:layout_constraintEnd_toStartOf="@+id/divisor_olvido_derecha"
        app:layout_constraintStart_toEndOf="@+id/divisor_olvido_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/btn_olvido_recordar_contraseña" />

    <View
        android:id="@+id/divisor_olvido_derecha"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:layout_constraintTop_toTopOf="@+id/tv_olvido_etiqueta_otra_opción" />

    <Button
        android:id="@+id/btn_atras"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_volver_inicio_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_olvido_etiqueta_otra_opción"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1.5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>